# whatsapp-telegram-bot

./: README.md
telegram_bot/: .exemple.env  .gitignore  main.py  pyproject.toml
telegram_bot/api/: webhook.py
telegram_bot/database/: session.py
telegram_bot/database/models/: __init__.py  base.py  category.py  payment.py  tarif.py  user.py
telegram_bot/database/requests/: category.py  initialize.py  payment.py  tarif.py  user.py
telegram_bot/settings/: config_bot.py  settings.py
telegram_bot/telegram_bot/: bot.py
telegram_bot/telegram_bot/common/: message_generate.py  state_context.py
telegram_bot/telegram_bot/handler/: admin.py  main_router.py  user.py  user_balance.py  user_tarif.py
telegram_bot/telegram_bot/keyboards/: main_button.py  template_button.py
whats_app_parse/: .env  main.js  package-lock.json  package.json  validation.js
