[project]
name = "parse-bot-whatsapp-messages"
version = "0.1.0"
description = "Parsing WhatsApp messages by filter you category selected"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aaio>=1.4.2",
    "aiogram>=3.21.0",
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
